Fix sidebar header wrapping.

--- a/assets/css/fernseed.scss
+++ b/assets/css/fernseed.scss
@@ -323,6 +323,7 @@ h3,
 h4,
 h5,
 h6,
+.sidebar-item-header,
 .no-breaks {
   word-break: normal;
   -webkit-hyphens: none;
